k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: card-learner
  labels:
    app: card-learner
spec:
  type: ClusterIP
  selector:
    app: card-learner
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
