k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card-learner
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - card-learner.jannekeipert.de
      secretName: multi-domain-cert
  rules:
    - host: card-learner.jannekeipert.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: card-learner
                port:
                  number: 80
